--- a/ml-basics/01 - Data Exploration/sub_modules/01_Data_Exploration_Exercise_02.ipynb
+++ b/ml-basics/01 - Data Exploration/sub_modules/01_Data_Exploration_Exercise_02.ipynb
@@ -386,7 +386,9 @@
                 "\n",
                 "`name <- function(variables) {return(value)}`\n",
                 "\n",
-                "> [patchwork](https://patchwork.data-imaginist.com/) extends `ggplot` API by providing mathematical operators (such as `+` or `/`) for combining multiple plots. Yes, as easy as that!\n"
+                "> [patchwork](https://patchwork.data-imaginist.com/) extends `ggplot` API by providing mathematical operators (such as `+` or `/`) for combining multiple plots. Yes, as easy as that!\n",
+                ">\n",
+                "> [`glue`](https://www.tidyverse.org/blog/2017/10/glue-1.2.0/) (part of the Tidyverse) allows you to interpolate your data into strings. Much in the same way as `cat` but easier.\n"
             ]
         },
         {
@@ -395,6 +397,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "library(glue)\n",
                 "library(patchwork)\n",
                 "# Create a function that we can reuse\n",
                 "show_distribution <- function(var_data, binwidth) {\n",
@@ -407,7 +410,7 @@
                 "  mod_val <- statip::mfv(pull(var_data))\n",
                 "\n",
                 "  # Print the stats\n",
-                "  stats <- glue::glue(\n",
+                "  stats <- glue(\n",
                 "  'Minimum: {format(round(min_val, 2), nsmall = 2)}\n",
                 "   Mean: {format(round(mean_val, 2), nsmall = 2)}\n",
                 "   Median: {format(round(med_val, 2), nsmall = 2)}\n",
@@ -566,6 +569,17 @@
                 "-   [Tidyverse packages](https://www.tidyverse.org/packages/)\n",
                 "\n",
                 "-   [Patchwork](https://patchwork.data-imaginist.com/)\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "library(here)\n",
+                "library(rmd2jupyter)\n",
+                "rmd2jupyter(\"01_Data_Exploration_Exercise_02.Rmd\")\n"
             ]
         }
     ],
