--- a/ml-basics/02 - Regression/challenges/02_Regression_Challenge.ipynb
+++ b/ml-basics/02 - Regression/challenges/02_Regression_Challenge.ipynb
@@ -91,7 +91,7 @@
                 "Save your trained model, and then use it to predict the price-per-unit for the following real estate transactions:\n",
                 "\n",
                 "| **transaction_date** | **house_age** | **transit_distance** | **local_convenience_stores** | **latitude** | **longitude** |\n",
-                "|:---------------------|:--------------|:---------------------|:-----------------------------|:-------------|:--------------|\n",
+                "|---------------------|----------------|--------------|--------|-------|------|\n",
                 "| 2013.167             | 16.2          | 289.3248             | 5                            | 24.98203     | 121.54348     |\n",
                 "| 2013.000             | 13.6          | 4082.015             | 0                            | 24.94155     | 121.50381     |\n"
             ]
@@ -104,6 +104,22 @@
             "source": [
                 "# Your code to use the trained model\n",
                 "\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": "\n"
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "library(here)\n",
+                "library(rmd2jupyter)\n",
+                "rmd2jupyter(\"02_Regression_Challenge.Rmd\")\n"
             ]
         }
     ],
