--- a/ml-basics/02 - Regression/challenges/02_Regression_Solution.ipynb
+++ b/ml-basics/02 - Regression/challenges/02_Regression_Solution.ipynb
@@ -425,13 +425,10 @@
                 "\n",
                 "Save your trained model, and then use it to predict the price-per-unit for the following real estate transactions:\n",
                 "\n",
-                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n",
                 "| **transaction_date** | **house_age** | **transit_distance** | **local_convenience_stores** | **latitude** | **longitude** |\n",
-                "+:=====================+:==============+:=====================+:=============================+:=============+:==============+\n",
+                "|---------------------|----------------|--------------|--------|-------|------|\n",
                 "| 2013.167             | 16.2          | 289.3248             | 5                            | 24.98203     | 121.54348     |\n",
-                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n",
-                "| 2013.000             | 13.6          | 4082.015             | 0                            | 24.94155     | 121.50381     |\n",
-                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n"
+                "| 2013.000             | 13.6          | 4082.015             | 0                            | 24.94155     | 121.50381     |\n"
             ]
         },
         {
@@ -505,6 +502,17 @@
                 "Happy Learning,\n",
                 "\n",
                 "[Eric](https://twitter.com/ericntay), Gold Microsoft Learn Student Ambassador.\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "library(here)\n",
+                "library(rmd2jupyter)\n",
+                "rmd2jupyter(\"02_Regression_Solution.Rmd\")\n"
             ]
         }
     ],
